--- a/Dragovian/Localization/English/Dragovian_English.loca.xml
+++ b/Dragovian/Localization/English/Dragovian_English.loca.xml
@@ -2,8 +2,8 @@
 <contentList>
 	<content contentuid="ha797d06ag30fag453cg8d6ag4113ea83b5fa" version="1">Dragovian</content>
 	<content contentuid="h3be2739fg6ec0g4453g8297gb7f4ad366da4" version="1">Legend states that the dragovian race came into being due to a curse meant to maim Bahamut during an ancient war with Tiamat. When the curse was aimed at Bahamut one of the Great Gold Wyrm's, Kuraenixia the Presence, took the curse instead, however, the magic was so great that it bounced upon many of the other combatants. This curse over time diminished the dragons size and power until they were similar in size and stature to that of humans and elves.</content>
-	<content contentuid="h4b53c6b0gabcfg4a91ga8f5g9318ca817681" version="1">Red Dragovian</content>
-	<content contentuid="h21b9a5d7gc6dag4dceg8e53g9d92bcbc6e14" version="1">This dragonkin derives their ancestry from the fiery blood of the red dragon race.</content>
+	<content contentuid="h4b53c6b0gabcfg4a91ga8f5g9318ca817681" version="1">Dovahsil</content>
+	<content contentuid="h21b9a5d7gc6dag4dceg8e53g9d92bcbc6e14" version="1">The name of the dragovians as awarded to them by their dragon breatheren. True to their name, which translates to "Dragon Soul," they embody the might of dragonkind in all that they do.</content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
