--- a/Dragovian/Localization/English/Dragovian_English.loca.xml
+++ b/Dragovian/Localization/English/Dragovian_English.loca.xml
@@ -6,10 +6,9 @@
 	<content contentuid="h21b9a5d7gc6dag4dceg8e53g9d92bcbc6e14" version="1">The name of the dragovians as awarded to them by their dragon breatheren. True to their name, which translates to "Dragon Soul," they embody the might of dragonkind in all that they do.</content>
 	
 	<content contentuid="h42dff89eg8fedg4289gb88ag346b0b896ab2" version="1">DovaBeam</content>
-	
-	<content contentuid="" version="1"></content>
-	<content contentuid="" version="1"></content>
-	<content contentuid="" version="1"></content>
+	<content contentuid="h66ada48cg9331g40bfg87e5g9c9c50b37c1a" version="1">Draconic Rage</content>
+	<content contentuid="h371a977fg0e03g4769gba14g50ea193613b7" version="1">Seething within is the soul of the dragon you used to be. Unleash it. Gain resistance to psychic damage. Unlocks the spell &lt;LSTag Type="Spell" Tooltip="Target_DragovianMultiattack"&gt;Talon Strikes&lt;/LSTag&gt;.</content>
+	<content contentuid="h8052c3a8gb49ag4acega481g8fc5937db7e6" version="1">Remembering a glimpse of your origins, you unleashed that primal power. You are resistant to psychic damage. Unlocks the spell &lt;LSTag Type="Spell" Tooltip="Target_DragovianMultiattack"&gt;Talon Strikes&lt;</content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
