--- a/Dragovian/Localization/English/Dragovian_English.loca.xml
+++ b/Dragovian/Localization/English/Dragovian_English.loca.xml
@@ -4,11 +4,19 @@
 	<content contentuid="h3be2739fg6ec0g4453g8297gb7f4ad366da4" version="1">Legend states that the dragovian race came into being due to a curse meant to maim Bahamut during an ancient war with Tiamat. When the curse was aimed at Bahamut one of the Great Gold Wyrm's, Kuraenixia the Presence, took the curse instead, however, the magic was so great that it bounced upon many of the other combatants. This curse over time diminished the dragons size and power until they were similar in size and stature to that of humans and elves.</content>
 	<content contentuid="h4b53c6b0gabcfg4a91ga8f5g9318ca817681" version="1">Dovahsil</content>
 	<content contentuid="h21b9a5d7gc6dag4dceg8e53g9d92bcbc6e14" version="1">The name of the dragovians as awarded to them by their dragon breatheren. True to their name, which translates to "Dragon Soul," they embody the might of dragonkind in all that they do.</content>
-	
+	<content contentuid="hbbef7ee275454c21a1b94886c5412d54c016" version="1">Leviathan</content>
+	<content contentuid="h7cfae09646a24edcaf881077e00c307ec231" version="1">Named for their ancestral ties to the gargantuans of the deep, these dragovians are aquatic wonders that are rarely seen on land. They guide the Sea-Forged on their journey across the the ocean, sometimes joining them on grand adventures throughout realmspace.</content>
+	<content contentuid="h9d4e808542cd46fdb04e04f4c2f7c19854ce" version="1">Kovgam</content>
+	<content contentuid="ha50a4cbd90774c2bb0b3f5413122be81g491" version="1">"Burn bright in the maker's fire." An ancient creed of the reforged dragovians; these words call to the iron engraved into their scales, vibrating with the magic of Dwemer smithwork. For the Kovgam, life is only as valuable as path forged ahead; the metal in their flesh a reminder that action is the law that governs the planes of existance.</content>
+	<content contentuid="hb1215fab8c574b64a3d457e220293c935cb6" version="1">Nurnelith</content>
+	<content contentuid="he68ea06d38aa4b549118fbc08f826c4a8g89" version="1">Not all dragovians were pleased with their lot in life after Tiamat cursed their kin. Some turned to death and saw an embrace; a mighty necrosis seeping into their scales and gripping their flesh. Possessed by this otherworldly madness, the Nurnelith seek the whispers from the void in a never ending bid for release from their mortal coil.</content>	
+
+
 	<content contentuid="h42dff89eg8fedg4289gb88ag346b0b896ab2" version="1">DovaBeam</content>
 	<content contentuid="h66ada48cg9331g40bfg87e5g9c9c50b37c1a" version="1">Draconic Rage</content>
 	<content contentuid="h371a977fg0e03g4769gba14g50ea193613b7" version="1">Seething within is the soul of the dragon you used to be. Unleash it. Gain resistance to psychic damage. Unlocks the spell &lt;LSTag Type="Spell" Tooltip="Target_DragovianMultiattack"&gt;Talon Strikes&lt;/LSTag&gt;.</content>
 	<content contentuid="h8052c3a8gb49ag4acega481g8fc5937db7e6" version="1">Remembering a glimpse of your origins, you unleashed that primal power. You are resistant to psychic damage. Unlocks the spell &lt;LSTag Type="Spell" Tooltip="Target_DragovianMultiattack"&gt;Talon Strikes&lt;</content>
+
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
