--- a/Dragovian/Localization/English/Dragovian_English.loca.xml
+++ b/Dragovian/Localization/English/Dragovian_English.loca.xml
@@ -60,10 +60,10 @@
 	<content contentuid="h7963dadbff5b47e78ad3efe2d677a628942c" version="1">Shove all targets back from the resulting blast.</content>
 	<content contentuid="hb2adfb25g0bedg4adagafaeg1782c8eab891" version="1">Capitalize</content>
 	<content contentuid="h12b19b1bg5da3g41b3f901bgd1d613fe8116" version="1">The wounds of your foe spur you on to finish the job. Deal an extra 1d4 of melee or ranged weapon damage to foes with less than full health.</content>
-	<content contentuid="" version="1"></content>
-	<content contentuid="" version="1"></content>
-	<content contentuid="" version="1"></content>
-	<content contentuid="" version="1"></content>
+	<content contentuid="hr345343567bedg4adagafaeg1782c8eab882" version="1">Flight</content>
+	<content contentuid="hdhncaj3554bfpbjadagafaeg1782c8eab882" version="1">Select how you would like to experience flight.</content>
+	<content contentuid="hs3gggb7897bfsahbcsdafaeg1782c8eab553" version="1">Breath Attacks</content>
+	<content contentuid="hr4dfgj3567bjdg4adagafsdh1782c2368331" version="1">Select an option from an assortment of draconic elemental attacks.</content>
 	<content contentuid="" version="1"></content>	
 	<content contentuid="" version="1"></content>
 	<content contentuid="" version="1"></content>
